Remove SurfaceTextureManager

This CL is a continuation of the cleanup started by
reveman@ in 97504148078bae539d317e89cee2de4155a6a166 [formerly c0329013d5cacd4c6c135e9d130a66ac3e25db4a]

The SurfaceTexture implementation of the GpuMemoryBuffer
was the only client of the SurfaceTextureManager.

BUG=608800,
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2525483005
Cr-Commit-Position: refs/heads/master@{#435991}

Former-commit-id: 3e776235561780d5548259663ba62bf8bf550c6a