gpu/command_buffer/common/unittest_main.cc
@@ -10,19 +10,12 @@
 #include "build/build_config.h"
 #include "mojo/edk/embedder/embedder.h"
 
-#if defined(OS_ANDROID)
-#include "gpu/ipc/client/android/in_process_surface_texture_manager.h"
-#endif
-
 namespace {
 
 class GpuTestSuite : public base::TestSuite {
  public:
   GpuTestSuite(int argc, char** argv);
   ~GpuTestSuite() override;
-
- protected:
-  void Initialize() override;
 
  private:
   DISALLOW_COPY_AND_ASSIGN(GpuTestSuite);
@@ -32,14 +25,6 @@ GpuTestSuite::GpuTestSuite(int argc, char** argv)
     : base::TestSuite(argc, argv) {}
 
 GpuTestSuite::~GpuTestSuite() {}
-
-void GpuTestSuite::Initialize() {
-  base::TestSuite::Initialize();
-#if defined(OS_ANDROID)
-  gpu::SurfaceTextureManager::SetInstance(
-      gpu::InProcessSurfaceTextureManager::GetInstance());
-#endif
-}
 
 }  // namespace
 
