content/test/content_test_suite.cc
@@ -30,7 +30,6 @@
 
 #if defined(OS_ANDROID)
 #include "content/browser/media/android/browser_media_player_manager.h"
-#include "gpu/ipc/client/android/in_process_surface_texture_manager.h"
 #endif
 
 namespace content {
@@ -97,8 +96,6 @@ void ContentTestSuite::Initialize() {
       testing::UnitTest::GetInstance()->listeners();
   listeners.Append(new TestInitializationListener);
 #if defined(OS_ANDROID)
-  gpu::SurfaceTextureManager::SetInstance(
-      gpu::InProcessSurfaceTextureManager::GetInstance());
   content::BrowserMediaPlayerManager::InitSurfaceTexturePeer();
 #endif
 }
